--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -3,10 +3,10 @@
 <head>
     <title>отчет по звонкам</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <script src="../js/bootstrap.min.js"></script>
-    <script src="../js/jquery-3.3.1.min.js"></script>
-    <script src="../js/popper.min.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/popper.min.js"></script>
 </head>
 <body>
     <div class="d-flex align-content-center">
@@ -27,10 +27,9 @@
             <button type="submit" class="btn-primary btn">показать</button>
         </form>
     </div>
-
-    <div class="d-flex align-content-center">
+    <div class="container">
         <?php foreach ($callGroups as $group): ?>
-        <?= include("callgroup.phtml") ;?>
+        <?= include("callgroup.phtml") ; ?>
         <?php endforeach;?>
     </div>
 </body>
