--- a/templates/callgroup.phtml
+++ b/templates/callgroup.phtml
@@ -1,16 +1,35 @@
 
 <div class="card border-<?= ($group->status) ? 'success' : 'warning'; ?>">
-    <div class="card-header">
-        <?= $group->externalNumber; ?>
+    <div class="card-header text-center bg-<?= ($group->status) ? 'success text-white' : 'warning text-dark'; ?>">
+        <img id="<?=$group->externalNumber;?>_img" src="img/closed.png"
+             height="32" width="32"
+             onclick="bodyDisplay('<?=$group->externalNumber;?>');"><?= $group->externalNumber; ?>
     </div>
-    <div class="card-body">
-        <table class="table table-bordered table-hover">
+    <div class="card-body" style="display: none" id="<?=$group->externalNumber;?>">
+        <table class="table table-bordered table-hover small border-dark" style="line-height: 0.9rem">
+            <tr>
+                <th>время звонка</th>
+                <th>А номер</th>
+                <th>Б номер</th>
+                <th>длительность</th>
+                <th>запись</th>
+            </tr>
         <?php foreach ($group->calls as $call):?>
-        <tr class="<?= ($call->status) ? 'bg-success text-white': 'bg-light text-warning'; ?>">
+        <tr class="alert alert-<?= ($call->status) ? 'success': 'warning'; ?>">
             <td><?= $call->calldate; ?></td>
             <td><?= $call->srcNumber; ?></td>
             <td><?= $call->dstNumber; ?></td>
-            <td><?= $call->duration; ?></td>
+            <td><?= gmdate("i:s", $call->duration); ?></td>
+            <?php if ($call->recordingfile):?>
+            <td>
+                <?php if ($call->recordingfile != '')?>
+                    <img src="img/play.png"
+                         height="32" width="32"
+                         onclick="showplay('<?= $call->recordingfile;?>');">
+                <?php endif; ?>
+            </td>
+        </tr>
+        <tr style="display: none;" id="<?= $call->recordingfile;?>">
             <td><audio class="media" controls src="records/<?= $call->recordingfile;?>"></audio></td>
         </tr>
         <?php endforeach; ?>
