--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -34,21 +34,21 @@
                 <div class="form-group col-auto">
                     <label class="col-form-label" for="from">С:</label>
                     <input type="date" name="from" class="form-control" id="from"
-                           value="<?= (isset($_GET['from'])) ? $_GET['from'] : date('Y-m-d');?>">
+                           value="<?php echo  (isset($_GET['from'])) ? $_GET['from'] : date('Y-m-d');?>">
                 </div>
                 <div class="form-group col-auto">
                     <label class="col-form-label" for="to">По:</label>
                     <input type="date" name="to" class="form-control" id="to"
-                           value="<?= (isset($_GET['to'])) ? $_GET['to'] : date('Y-m-d');?>">
+                           value="<?php echo  (isset($_GET['to'])) ? $_GET['to'] : date('Y-m-d');?>">
                 </div>
                 <div class="col-auto">
                     <label class="col-form-label" for="ext">Внешний номер:</label>
                     <select class="custom-select" name="external" id="ext">
                         <option value="0">все</option>
                         <?php foreach ($dids as $did): ?>
-                        <option value="<?= $did; ?>"
-                            <?= (isset($_GET['external']) && ($_GET['external'] == $did)) ? 'selected' : ''?>>
-                            <?= $did; ?>
+                        <option value="<?php echo  $did; ?>"
+                            <?php echo  (isset($_GET['external']) && ($_GET['external'] == $did)) ? 'selected' : ''?>>
+                            <?php echo  $did; ?>
                         </option>
                         <?php endforeach; ?>
                     </select>
@@ -58,9 +58,9 @@
                     <select class="custom-select" name="internal" id="int">
                         <option value="0">все</option>
                         <?php foreach ($intertnals as $internal): ?>
-                            <option value="<?= $internal; ?>"
-                        <?= (isset($_GET['internal']) && ($_GET['internal'] == $internal)) ? 'selected' : ''?>>
-                                <?= $internal; ?>
+                            <option value="<?php echo  $internal; ?>"
+                        <?php echo  (isset($_GET['internal']) && ($_GET['internal'] == $internal)) ? 'selected' : ''?>>
+                                <?php echo  $internal; ?>
                             </option>
                         <?php endforeach; ?>
                     </select>
